--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,89 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+
+<AnchorPane minHeight="471.0" minWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <HBox id="Esquema" fx:id="EsquemaHBox" prefHeight="33.0" prefWidth="600.0" AnchorPane.bottomAnchor="430.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+         <children>
+            <Separator orientation="VERTICAL" prefHeight="150.0" visible="false" />
+            <ComboBox id="Esquema ComboBox" fx:id="esquemaCombo" prefWidth="175.0" promptText="Esquemas" />
+            <Separator orientation="VERTICAL" prefHeight="22.0" prefWidth="6.0" visible="false" />
+            <TextField id="Esquema TextField" fx:id="esquemaText" prefWidth="185.0" promptText="Nombre de esquema" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <Button id="Nuevo Esquema Button" fx:id="nuevoEsquemaButton" mnemonicParsing="false" onMouseClicked="#nuevoEsquemaButton" text="Nuevo Esquema" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <Button id="Borrar Esquema Button" fx:id="borrarEsquemaButton" mnemonicParsing="false" text="Borrar Esauema" />
+         </children>
+         <padding>
+            <Insets bottom="3.0" top="3.0" />
+         </padding>
+      </HBox>
+      <HBox id="Tabla" fx:id="TablaHBox" layoutX="-4.0" layoutY="40.0" prefHeight="33.0" prefWidth="600.0" AnchorPane.bottomAnchor="398.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+         <children>
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <ComboBox id="Tabla ComboBox" fx:id="tablaCombo" prefWidth="175.0" promptText="Tablas" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <TextField id="Tabla TextField" fx:id="tablaText" prefWidth="185.0" promptText="Nombre de tabla" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <Button id="Nueva Tabla Button" fx:id="nuevaTablaButton" maxWidth="107.5" mnemonicParsing="false" prefHeight="27.0" prefWidth="107.0" text="Nueva Tabla" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <Button id="Borrar Tabla Button" fx:id="borrarTablaButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="104.5" text="Borrar Tabla" />
+         </children>
+         <padding>
+            <Insets bottom="3.0" top="3.0" />
+         </padding>
+      </HBox>
+      <TableView layoutX="200.0" layoutY="125.0" prefHeight="325.0" prefWidth="600.0" AnchorPane.bottomAnchor="66.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="76.0">
+        <columns>
+          <TableColumn prefWidth="27.250009059906006" text="Id" />
+          <TableColumn prefWidth="272.25879669189453" text="email" />
+            <TableColumn minWidth="0.0" prefWidth="299.24114990234375" text="clave" />
+        </columns>
+      </TableView>
+      <HBox fx:id="BusquedaHBox" layoutY="401.0" prefHeight="33.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <ComboBox id="Buesqueda ComboBox" fx:id="columnaCombo" prefHeight="27.0" prefWidth="113.0" promptText="Columna" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <TextField id="Busqueda TextField" fx:id="busquedaText" prefWidth="185.0" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <Button id="Buscar Button" fx:id="buscarButton" mnemonicParsing="false" prefWidth="90.0" text="Buscar" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <Button id="Borrar Button" fx:id="borrarButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="90.0" text="Borrar" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <Button id="CargarTodos Button" fx:id="cargarButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="Cargar Todos" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+         </children>
+         <padding>
+            <Insets bottom="3.0" top="7.0" />
+         </padding>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </HBox>
+      <HBox prefHeight="33.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <TextField id="Bottom TextField" prefHeight="27.0" prefWidth="489.0">
+               <padding>
+                  <Insets bottom="3.0" top="3.0" />
+               </padding>
+            </TextField>
+            <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+            <Button id="Bottom Buscar Button" mnemonicParsing="false" prefHeight="27.0" prefWidth="93.5" text="Buscar" />
+         </children>
+         <padding>
+            <Insets bottom="3.0" top="3.0" />
+         </padding>
+      </HBox>
+   </children>
+</AnchorPane>
